Add header test to the unix makefile.
Also regularize naming a bit.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -36,9 +36,10 @@ ENCODER_EXAMPLE_TARGET = encoder_example
 PLAYER_EXAMPLE_TARGET = player_example
 # Test targets
 ECTEST_TARGET = ectest
-TEST_COEF_CODER_TARGET = test_coef_coder
-LOGGING_TEST_TARGET = logging_test
 TEST_CHECK_INITIAL_TARGET = check_initial
+TEST_COEF_CODER_TARGET = test_coef_coder
+TEST_HEADER_TARGET = check_tests
+TEST_LOGGING_TARGET = logging_test
 
 # The command to use to generate dependency information
 MAKEDEPEND = gcc -MM
@@ -83,7 +84,8 @@ endif
 
 ECTEST_LIBS = -lm
 TEST_COEF_CODER_LIBS = -lm
-LOGGING_TEST_LIBS = ./libdaalabase.a -lm
+TEST_HEADER_LIBS = -lcheck
+TEST_LOGGING_LIBS = -lm
 TEST_CHECK_INITIAL_LIBS = -lcheck
 
 # ANYTHING BELOW THIS LINE PROBABLY DOES NOT NEED EDITING
@@ -178,8 +180,9 @@ $(if $(findstring -DOD_LOGGING_ENABLED,${CFLAGS}), \
 logging.c \
 )
 
-LOGGING_TEST_CSOURCES=tests/logging_test.c
 TEST_CHECK_INITIAL_CSOURCES = tests/check_initial.c
+TEST_HEADER_CSOURCES=tests/check_main.c tests/headerencode_test.c
+TEST_LOGGING_CSOURCES=tests/logging_test.c
 
 # Create object file list.
 LIBDAALABASE_OBJS:= ${LIBDAALABASE_CSOURCES:%.c=${WORKDIR}/%.o}
@@ -195,12 +198,14 @@ DUMP_VIDEO_OBJS:= ${DUMP_VIDEO_CSOURCES:%.c=${WORKDIR}/%.o}
 ENCODER_EXAMPLE_OBJS:= ${ENCODER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
 PLAYER_EXAMPLE_OBJS:= ${PLAYER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
 ECTEST_OBJS:= ${ECTEST_CSOURCES:%.c=${WORKDIR}/%.o}
-TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
-LOGGING_TEST_OBJS:= ${LOGGING_TEST_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_CHECK_INITIAL_OBJS:= ${TEST_CHECK_INITIAL_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_HEADER_OBJS:= ${TEST_HEADER_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_LOGGING_OBJS:= ${TEST_LOGGING_CSOURCES:%.c=${WORKDIR}/%.o}
 ALL_OBJS:= ${LIBDAALABASE_OBJS} ${LIBDAALADEC_OBJS} ${LIBDAALAENC_OBJS} \
  ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS} \
- ${ECTEST_OBJS} ${TEST_COEF_CODER_OBJS} ${TEST_CHECK_INITIAL_OBJS}
+ ${ECTEST_OBJS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_COEF_CODER_OBJS} \
+ ${TEST_HEADER_OBJS} ${TEST_LOGGING_OBJS}
 # Create the dependency file list
 ALL_DEPS:= ${ALL_OBJS:%.o=%.d}
 # Prepend source path to file names.
@@ -214,8 +219,8 @@ DUMP_VIDEO_CSOURCES:= ${DUMP_VIDEO_CSOURCES:%=${BINSRCDIR}/%}
 ENCODER_EXAMPLE_CSOURCES:= ${ENCODER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 PLAYER_EXAMPLE_CSOURCES:= ${PLAYER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 ECTEST_CSOURCES:= ${ECTEST_CSOURCES:%=${TESTSRCDIR}/%}
-TEST_COEF_CODER_CSOURCES:= ${TEST_COEF_CODER_CSOURCES:%=${TESTSRCDIR}/%}
 TEST_CHECK_INITIAL_CSOURCES:= ${TEST_CHECK_INITIAL_CSOURCES:%=${TESTSRCDIR}/%}
+TEST_COEF_CODER_CSOURCES:= ${TEST_COEF_CODER_CSOURCES:%=${TESTSRCDIR}/%}
 ALL_CSOURCES:= ${LIBDAALABASE_CSOURCES} ${LIBDAALADEC_CSOURCES} \
  ${LIBDAALAENC_CSOURCES} ${DUMP_VIDEO_CSOURCES} ${ENCODER_EXAMPLE_CSOURCES} \
  ${PLAYER_EXAMPLE_CSOURCES} ${ECTEST_CSOURCES} ${TEST_COEF_CODER_CSOURCES} \
@@ -229,15 +234,16 @@ ENCODER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${ENCODER_EXAMPLE_TARGET}
 PLAYER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${PLAYER_EXAMPLE_TARGET}
 # Prepend test path to file names.
 ECTEST_TARGET:= ${TESTBINDIR}/${ECTEST_TARGET}
-TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
-LOGGING_TEST_TARGET:= ${TESTBINDIR}/${LOGGING_TEST_TARGET}
 TEST_CHECK_INITIAL_TARGET:= ${TESTBINDIR}/${TEST_CHECK_INITIAL_TARGET}
+TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
+TEST_HEADER_TARGET:= ${TESTBINDIR}/${TEST_HEADER_TARGET}
+TEST_LOGGING_TARGET:= ${TESTBINDIR}/${TEST_LOGGING_TARGET}
 
 # Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
  ${PLAYER_EXAMPLE_TARGET} ${ECTEST_TARGET} ${TEST_COEF_CODER_TARGET} \
- ${LOGGING_TEST_TARGET} ${TEST_CHECK_INITIAL_TARGET}
+ ${TEST_HEADER_TARGET} ${TEST_LOGGING_TARGET} ${TEST_CHECK_INITIAL_TARGET}
 
 # Targets:
 # Everything (default)
@@ -279,6 +285,11 @@ ${PLAYER_EXAMPLE_TARGET}: ${PLAYER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
 	${CC} ${CFLAGS} -o $@ ${PLAYER_EXAMPLE_OBJS} ${LIBS} \
          ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET}
 
+# check_initial
+${TEST_CHECK_INITIAL_TARGET}: ${TEST_CHECK_INITIAL_OBJS}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_CHECK_INITIAL_LIBS} -o $@
+
 # ectest
 ${ECTEST_TARGET}: ${ECTEST_OBJS}
 	mkdir -p ${TESTBINDIR}
@@ -290,17 +301,17 @@ ${TEST_COEF_CODER_TARGET}: ${TEST_COEF_CODER_OBJS} ${LIBDAALABASE_TARGET}
 	${CC} ${CFLAGS} ${TEST_COEF_CODER_OBJS} ${TEST_COEF_CODER_LIBS} -o $@ \
 	  ${LIBDAALABASE_TARGET}
 
+# test_header
+${TEST_HEADER_TARGET}: ${TEST_HEADER_OBJS} ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${TEST_HEADER_OBJS} ${TEST_HEADER_LIBS} -o $@ \
+	  ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
+
 # logging_test
-${LOGGING_TEST_TARGET}: ${LOGGING_TEST_OBJS} ${LIBDAALABASE_TARGET}
+${TEST_LOGGING_TARGET}: ${TEST_LOGGING_OBJS} ${LIBDAALABASE_TARGET}
 	mkdir -p ${TESTBINDIR}
-	${CC} ${CFLAGS} ${LOGGING_TEST_OBJS} ${LOGGING_TEST_LIBS} -o $@ \
+	${CC} ${CFLAGS} ${TEST_LOGGING_OBJS} ${TEST_LOGGING_LIBS} -o $@ \
 	  ${LIBDAALABASE_TARGET}
-
-# check_initial
-${TEST_CHECK_INITIAL_TARGET}: ${TEST_CHECK_INITIAL_OBJS}
-	mkdir -p ${TESTBINDIR}
-	${CC} ${CFLAGS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_CHECK_INITIAL_LIBS} -o $@
-
 # Assembly listing
 ALL_ASM := ${ALL_OBJS:%.o=%.s}
 asm: ${ALL_ASM}
@@ -308,9 +319,10 @@ asm: ${ALL_ASM}
 # check that build is complete
 check: all
 	${ECTEST_TARGET}
-	${TEST_COEF_CODER_TARGET}
-	${LOGGING_TEST_TARGET}
 	${TEST_CHECK_INITIAL_TARGET}
+	${TEST_COEF_CODER_TARGET}
+	${TEST_HEADER_TARGET}
+	${TEST_LOGGING_TARGET}
 
 # Remove all targets.
 clean:
