Move -lm to build rules in the unix makefile.
Only ectest makes libm calls directly. The rest of the tests
only need it because they link to libdaala so it makes more
sense to keep the link command there than in the test-specific
libs variable. The daala library is tracked separately.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -83,9 +83,9 @@ ifeq ($(findstring -DOD_DUMP_IMAGES,${CFLAGS}),-DOD_DUMP_IMAGES)
 endif
 
 ECTEST_LIBS = -lm
-TEST_COEF_CODER_LIBS = -lm
-TEST_HEADER_LIBS = -lcheck -lm
-TEST_LOGGING_LIBS = -lm
+TEST_COEF_CODER_LIBS =
+TEST_HEADER_LIBS = -lcheck
+TEST_LOGGING_LIBS =
 TEST_CHECK_INITIAL_LIBS = -lcheck
 
 # ANYTHING BELOW THIS LINE PROBABLY DOES NOT NEED EDITING
@@ -299,19 +299,20 @@ ${ECTEST_TARGET}: ${ECTEST_OBJS}
 ${TEST_COEF_CODER_TARGET}: ${TEST_COEF_CODER_OBJS} ${LIBDAALABASE_TARGET}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_COEF_CODER_OBJS} ${TEST_COEF_CODER_LIBS} -o $@ \
-	  ${LIBDAALABASE_TARGET}
+	  ${LIBDAALABASE_TARGET} -lm
 
 # test_header
 ${TEST_HEADER_TARGET}: ${TEST_HEADER_OBJS} ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_HEADER_OBJS} ${TEST_HEADER_LIBS} -o $@ \
-	  ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
+	  ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET} -lm
 
 # logging_test
 ${TEST_LOGGING_TARGET}: ${TEST_LOGGING_OBJS} ${LIBDAALABASE_TARGET}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_LOGGING_OBJS} ${TEST_LOGGING_LIBS} -o $@ \
-	  ${LIBDAALABASE_TARGET}
+	  ${LIBDAALABASE_TARGET} -lm
+
 # Assembly listing
 ALL_ASM := ${ALL_OBJS:%.o=%.s}
 asm: ${ALL_ASM}
