Add header decoding support.
Original patch from Eric Rescorla <ekr@rtfm.com>.
This still needs more unit tests, but I want to get this checked
 in to unblock people working on the decoder front-end.

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,6 +89,7 @@ src_libdaalaenc_la_SOURCES = \
 	src/block_size_enc.c \
 	src/encode.c \
 	src/decode.c \
+	src/infodec.c \
 	src/infoenc.c \
 	src/mcenc.c
 
