--- a/unix/Makefile
+++ b/unix/Makefile
@@ -160,10 +160,9 @@ decint.h \
 LIBDAALAENC_CSOURCES = \
 block_size_dec.c \
 block_size_enc.c \
-encode.c \
 decode.c \
+encode.c \
 infoenc.c \
-infodec.c \
 mcenc.c \
 
 LIBDAALAENC_CHEADERS = \
@@ -304,10 +303,12 @@ ${TEST_COEF_CODER_TARGET}: ${TEST_COEF_CODER_OBJS} ${LIBDAALABASE_TARGET}
 	  ${LIBDAALABASE_TARGET} -lm
 
 # test_header
-${TEST_HEADER_TARGET}: ${TEST_HEADER_OBJS} ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
+${TEST_HEADER_TARGET}: ${TEST_HEADER_OBJS} ${LIBDAALADEC_TARGET} \
+ ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_HEADER_OBJS} ${TEST_HEADER_LIBS} -o $@ \
-	  ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET} -lm
+	  ${LIBDAALADEC_TARGET} ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET} \
+	  -lm
 
 # logging_test
 ${TEST_LOGGING_TARGET}: ${TEST_LOGGING_OBJS} ${LIBDAALABASE_TARGET}
