--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -2,7 +2,7 @@
 
 PROJECT_NAME           = @PACKAGE@
 PROJECT_NUMBER         = @VERSION@
-PROJECT_BRIEF          = "Experimental video codec API reference."
+PROJECT_BRIEF          = "Experimental Daala video codec API reference."
 
 INPUT                  = @top_srcdir@/include/daala
 STRIP_FROM_PATH        = @top_srcdir@/include
@@ -13,7 +13,7 @@ GENERATE_MAN           = YES
 
 QUIET                  = YES
 WARNINGS               = YES
-WARN_IF_UNDOCUMENTED   = YES
+WARN_IF_UNDOCUMENTED   = NO
 WARN_IF_DOC_ERROR      = YES
 WARN_NO_PARAMDOC       = YES
 
