Add --disable-unit-tests flag to configure.
This makes it easier to port to platforms where check is
 unavailable.
We'd also need it for targets which have a minimal or no libc, even
 without the check issues.

Signed-off-by: Timothy B. Terriberry <tterribe@xiph.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -369,6 +369,7 @@ tools_gen_laplace_tables_LDADD = $(OGG_LIBS) $(PNG_LIBS) -lm
 
 # Tests
 
+if ENABLE_UNIT_TESTS
 noinst_PROGRAMS += \
 	src/tests/ectest \
 	src/tests/test_coef_coder \
@@ -411,6 +412,8 @@ src_tests_check_tests_LDADD = \
  $(OGG_LIBS) \
  $(CHECK_LIBS) \
  -lm
+
+endif
 
 # Docs
 
