Add trans_gain tool for coding gain computation with arbitrary transforms
The trans_gain tool is specialized to only compute covariance
matricies and coding gain of various 1D and 2D transforms (lapped and
unlapped KLT, lapped and unlapped DCT, and CDF 9/7 wavelets).

It computes the covariance matrix three possible ways. The first
two are equivalent to Nathan's original full and collapsed covariance
calculations, using equivalent blocking/boundary conditions, and
should return equivalent answers to trans and trans2d within machine
precision limits.  The coding gain calculation code is de-optimized
for easier reading, so machine precision will account for very small
variations.

The third covariance matrix calculation accumulates and computes the
'collapsed' covariance matrix directly.  It considers each possible
set of pixels for a given offset only once and operates from
edge-to-edge in the image and so should show no border effects. Among
other things, this means that larger covariance matricies are strict
supersets of smaller matricies.

--- a/Makefile.am
+++ b/Makefile.am
@@ -147,6 +147,7 @@ noinst_PROGRAMS += \
 	tools/intra_trace \
 	tools/trans \
 	tools/trans2d \
+	tools/trans_gain \
 	tools/init_intra_xform \
 	tools/gen_cdf \
 	tools/gen_laplace_tables
@@ -312,6 +313,19 @@ tools_trans_SOURCES = \
 	src/intradata.c
 tools_trans_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS) -fopenmp
 tools_trans_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) -lm
+
+# trans_gain
+tools_trans_gain_SOURCES = \
+	tools/trans_gain.c \
+	src/internal.c \
+	tools/vidinput.c \
+	tools/od_filter.c \
+	tools/trans_tools.c \
+	src/filter.c \
+	src/newdct.c \
+	src/intradata.c
+tools_trans_gain_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS) -fopenmp
+tools_trans_gain_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) -lm
 
 #trans2d
 tools_trans2d_SOURCES = \
