Extending OD_DIVU_DMAX to 64.
A program has been added to tools that generates the table
 OD_DIVU_SMALL_CONSTS for any integer input n.
A unit test has been added that tests integer division of the numbers
 1 to 1,000,000 for all divisors, as well as another 1,000,000 random
 numbers.

--- a/Makefile.am
+++ b/Makefile.am
@@ -140,6 +140,7 @@ noinst_PROGRAMS += \
 	tools/y4m2png \
 	tools/dump_psnrhvs \
 	tools/block_size_analysis \
+	tools/divu_const \
 	tools/plot_intra_maps \
 	tools/init_intra_maps \
 	tools/intra_stats \
@@ -206,6 +207,12 @@ tools_block_size_analysis_SOURCES = \
 	src/switch_table.c
 tools_block_size_analysis_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
 tools_block_size_analysis_LDADD = $(THEORA_LIBS) $(OGG_LIBS) $(PNG_LIBS) -lm
+
+# divu_const
+tools_divu_const_SOURCES = \
+	tools/divu_const.c
+tools_divu_const_CFLAGS = $(OGG_CFLAGS)
+tools_divu_const_LDADD = $(OGG_LIBS) -lm
 
 # plot_intra_maps
 tools_plot_intra_maps_SOURCES = \
@@ -387,12 +394,14 @@ noinst_PROGRAMS += \
 	src/tests/ectest \
 	src/tests/test_coef_coder \
 	src/tests/logging_test \
+	src/tests/test_divu_small \
 	src/tests/check_tests
 
 TESTS = \
 	src/tests/ectest \
 	src/tests/test_coef_coder \
 	src/tests/logging_test \
+	src/tests/test_divu_small \
 	src/tests/check_tests
 
 src_tests_ectest_SOURCES = src/tests/ectest.c
@@ -413,6 +422,12 @@ src_tests_logging_test_LDADD = \
  src/libdaalabase.la \
  src/libdaalaenc.la \
  $(OGG_LIBS)
+
+src_tests_test_divu_small_SOURCES = src/tests/test_divu_small.c
+src_tests_test_divu_small_CFLAGS = $(OGG_CFLAGS)
+src_tests_test_divu_small_LDADD = \
+ src/libdaalabase.la \
+ ${OGG_LIBS}
 
 src_tests_check_tests_SOURCES = \
  src/tests/check_main.c \
