--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -365,7 +365,8 @@ GEN_LAPLACE_TABLES_TARGET:=gen_laplace_tables
 
 
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNRHVS_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
- ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${IS_OBJS} ${IP_OBJS} ${IT_OBJS} ${T_OBJS} ${T2D_OBJS} ${BSIZE_OBJS}
+ ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${IS_OBJS} ${IP_OBJS} ${IT_OBJS} ${T_OBJS} \
+ ${TG_OBJS} ${T2D_OBJS} ${BSIZE_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
