Pre/post-filter code now operates a SB at a time.
Added od_apply_prefilter and od_apply_postfilter which filter an entire
 superblock in row order given an edge mask.
Added test_filters.c to test that pre and post filters correctly handle
 multiple block sizes.

--- a/Makefile.am
+++ b/Makefile.am
@@ -398,6 +398,7 @@ noinst_PROGRAMS += \
 	src/tests/test_coef_coder \
 	src/tests/logging_test \
 	src/tests/test_divu_small \
+	src/tests/test_filters \
 	src/tests/check_tests
 
 TESTS = \
@@ -405,6 +406,7 @@ TESTS = \
 	src/tests/test_coef_coder \
 	src/tests/logging_test \
 	src/tests/test_divu_small \
+	src/tests/test_filters \
 	src/tests/check_tests
 
 src_tests_ectest_SOURCES = src/tests/ectest.c
@@ -429,6 +431,12 @@ src_tests_logging_test_LDADD = \
 src_tests_test_divu_small_SOURCES = src/tests/test_divu_small.c
 src_tests_test_divu_small_CFLAGS = $(OGG_CFLAGS)
 src_tests_test_divu_small_LDADD = \
+ src/libdaalabase.la \
+ ${OGG_LIBS}
+
+src_tests_test_filters_SOURCES = src/tests/test_filters.c
+src_tests_test_filters_CFLAGS = $(OGG_CFLAGS)
+src_tests_test_filters_LDADD = \
  src/libdaalabase.la \
  ${OGG_LIBS}
 
