--- a/unix/Makefile
+++ b/unix/Makefile
@@ -40,6 +40,8 @@ TEST_CHECK_INITIAL_TARGET = check_initial
 TEST_COEF_CODER_TARGET = test_coef_coder
 TEST_HEADER_TARGET = check_tests
 TEST_LOGGING_TARGET = logging_test
+TEST_DIVU_SMALL_TARGET = test_divu_small
+TEST_FILTERS_TARGET = test_filters
 
 # The command to use to generate dependency information
 MAKEDEPEND = gcc -MM
@@ -87,6 +89,8 @@ TEST_COEF_CODER_LIBS =
 TEST_HEADER_LIBS = -lcheck
 TEST_LOGGING_LIBS =
 TEST_CHECK_INITIAL_LIBS = -lcheck
+TEST_DIVU_SMALL_LIBS =
+TEST_FILTER_LIBS =
 
 # ANYTHING BELOW THIS LINE PROBABLY DOES NOT NEED EDITING
 CINCLUDE := -I../include ${CINCLUDE}
@@ -186,6 +190,8 @@ logging.c \
 TEST_CHECK_INITIAL_CSOURCES = tests/check_initial.c
 TEST_HEADER_CSOURCES=tests/check_main.c tests/headerencode_test.c
 TEST_LOGGING_CSOURCES=tests/logging_test.c
+TEST_DIVU_SMALL_CSOURCES=tests/test_divu_small.c
+TEST_FILTERS_CSOURCES=tests/test_filters.c
 
 # Create object file list.
 LIBDAALABASE_OBJS:= ${LIBDAALABASE_CSOURCES:%.c=${WORKDIR}/%.o}
@@ -205,10 +211,13 @@ TEST_CHECK_INITIAL_OBJS:= ${TEST_CHECK_INITIAL_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_HEADER_OBJS:= ${TEST_HEADER_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_LOGGING_OBJS:= ${TEST_LOGGING_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_DIVU_SMALL_OBJS:= ${TEST_DIVU_SMALL_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_FILTERS_OBJS:= ${TEST_FILTERS_CSOURCES:%.c=${WORKDIR}/%.o}
 ALL_OBJS:= ${LIBDAALABASE_OBJS} ${LIBDAALADEC_OBJS} ${LIBDAALAENC_OBJS} \
  ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS} \
  ${ECTEST_OBJS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_COEF_CODER_OBJS} \
- ${TEST_HEADER_OBJS} ${TEST_LOGGING_OBJS}
+ ${TEST_HEADER_OBJS} ${TEST_LOGGING_OBJS} ${TEST_DIVU_SMALL_OBJS} \
+ ${TEST_FILTERS_OBJS}
 # Create the dependency file list
 ALL_DEPS:= ${ALL_OBJS:%.o=%.d}
 # Prepend source path to file names.
@@ -241,12 +250,15 @@ TEST_CHECK_INITIAL_TARGET:= ${TESTBINDIR}/${TEST_CHECK_INITIAL_TARGET}
 TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
 TEST_HEADER_TARGET:= ${TESTBINDIR}/${TEST_HEADER_TARGET}
 TEST_LOGGING_TARGET:= ${TESTBINDIR}/${TEST_LOGGING_TARGET}
+TEST_DIVU_SMALL_TARGET:=${TESTBINDIR}/${TEST_DIVU_SMALL_TARGET}
+TEST_FILTERS_TARGET:=${TESTBINDIR}/${TEST_FILTERS_TARGET}
 
 # Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
  ${PLAYER_EXAMPLE_TARGET} ${ECTEST_TARGET} ${TEST_COEF_CODER_TARGET} \
- ${TEST_HEADER_TARGET} ${TEST_LOGGING_TARGET} ${TEST_CHECK_INITIAL_TARGET}
+ ${TEST_HEADER_TARGET} ${TEST_LOGGING_TARGET} ${TEST_CHECK_INITIAL_TARGET} \
+ ${TEST_DIVU_SMALL_TARGET} ${TEST_FILTERS_TARGET}
 
 # Targets:
 # Everything (default)
@@ -318,6 +330,18 @@ ${TEST_LOGGING_TARGET}: ${TEST_LOGGING_OBJS} ${LIBDAALABASE_TARGET}
 	${CC} ${CFLAGS} ${TEST_LOGGING_OBJS} ${TEST_LOGGING_LIBS} -o $@ \
 	  ${LIBDAALABASE_TARGET} -lm
 
+# test_divu_small
+${TEST_DIVU_SMALL_TARGET}: ${TEST_DIVU_SMALL_OBJS} ${LIBDAALABASE_TARGET}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${TEST_DIVU_SMALL_OBJS} ${TEST_DIVU_SMALL_LIBS} -o $@ \
+	  ${LIBDAALABASE_TARGET} -lm
+
+# test_filters
+${TEST_FILTERS_TARGET}: ${TEST_FILTERS_OBJS} ${LIBDAALABASE_TARGET}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${TEST_FILTERS_OBJS} ${TEST_FILTERS_LIBS} -o $@ \
+	  ${LIBDAALABASE_TARGET} -lm
+
 # Assembly listing
 ALL_ASM := ${ALL_OBJS:%.o=%.s}
 asm: ${ALL_ASM}
@@ -329,6 +353,8 @@ check: all
 	${TEST_COEF_CODER_TARGET}
 	${TEST_HEADER_TARGET}
 	${TEST_LOGGING_TARGET}
+	${TEST_DIVU_SMALL_TARGET}
+	${TEST_FILTERS_TARGET}
 
 # Remove all targets.
 clean:
