Move ${LIBS} to the end of unix build example link lines. r=ron
pvq.c in daalabase now requires -lm at least under gold.
The examples already have -lm from ${LIBS} but it was
listed before the libdaala*.a, which is important for static
linking. Moving it to the end resolves the ordering problem.

Unbreaks the build on Ubuntu.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -283,22 +283,22 @@ ${LIBDAALAENC_TARGET}: ${LIBDAALAENC_OBJS}
 ${DUMP_VIDEO_TARGET}: ${DUMP_VIDEO_OBJS} ${LIBDAALABASE_TARGET} \
                        ${LIBDAALADEC_TARGET}
 	mkdir -p ${TARGETBINDIR}
-	${CC} ${CFLAGS} -o $@ ${DUMP_VIDEO_OBJS} ${LIBS} \
-         ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET}
+	${CC} ${CFLAGS} -o $@ ${DUMP_VIDEO_OBJS} \
+         ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET} ${LIBS}
 
 # encoder_example
 ${ENCODER_EXAMPLE_TARGET}: ${ENCODER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
                             ${LIBDAALAENC_TARGET}
 	mkdir -p ${TARGETBINDIR}
-	${CC} ${CFLAGS} -o $@ ${ENCODER_EXAMPLE_OBJS} ${LIBS} \
-         ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET}
+	${CC} ${CFLAGS} -o $@ ${ENCODER_EXAMPLE_OBJS} \
+         ${LIBDAALAENC_TARGET} ${LIBDAALABASE_TARGET} ${LIBS}
 
 # player_example
 ${PLAYER_EXAMPLE_TARGET}: ${PLAYER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
                            ${LIBDAALADEC_TARGET}
 	mkdir -p ${TARGETBINDIR}
-	${CC} ${CFLAGS} -o $@ ${PLAYER_EXAMPLE_OBJS} ${LIBS} \
-         ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET}
+	${CC} ${CFLAGS} -o $@ ${PLAYER_EXAMPLE_OBJS} \
+         ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET} ${LIBS}
 
 # check_initial
 ${TEST_CHECK_INITIAL_TARGET}: ${TEST_CHECK_INITIAL_OBJS}
